feat(tooltip): remove silly :parent selector from hover behavior

--- a/src/css/garden.css
+++ b/src/css/garden.css
@@ -48,5 +48,6 @@
 @import "molecules/thumbnail";
 @import "molecules/feedback";
 @import "molecules/collapse";
+@import "molecules/tooltip";
 
 @import "molecules/panel";
