--- a/src/css/utils/mixins/form-component.css
+++ b/src/css/utils/mixins/form-component.css
@@ -17,7 +17,7 @@
   }
 
   &[disabled],
-  .disabled {
+  &.disabled {
     background-color: $color-neutral;
     border-color: $color-default-light;
     color: $color-default-light;
