--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -56,11 +56,8 @@ html(lang="pt-BR")
       $('.docs').form();
 
       var modal = $('[data-modal]').modal({
-        triggerClose: '[data-trigger="close"]'
-      });
-
-      $('[data-trigger="open"]').on('click', function() {
-        modal.data('modal').show();
+        triggerClose: '[data-trigger="close"]',
+        triggerOpen: '[data-trigger="open"]'
       });
 
       $('[data-notification-dynamic]').notification({
