fix(button): add disabled class to .button-text

--- a/src/css/atoms/button.css
+++ b/src/css/atoms/button.css
@@ -89,7 +89,8 @@
 
   @mixin disable-shadow;
 
-  &[disabled] {
+  &[disabled],
+  &.disabled {
     background-color: transparent;
     color: $color-default-light;
   }
