fix(button): missing hover (#145)
* fix(button): add hover

* fix(button): add disabled class to .button-text

* feat(stylelint): update version and rules

--- a/src/css/atoms/button.css
+++ b/src/css/atoms/button.css
@@ -39,6 +39,7 @@
   }
 
   &:hover {
+    cursor: pointer;
 
     &::before {
       opacity: 0;
@@ -88,7 +89,8 @@
 
   @mixin disable-shadow;
 
-  &[disabled] {
+  &[disabled],
+  &.disabled {
     background-color: transparent;
     color: $color-default-light;
   }
