feat(table): add table css component

--- a/src/css/garden.css
+++ b/src/css/garden.css
@@ -25,6 +25,7 @@
 @import "atoms/modal";
 @import "atoms/notification";
 @import "atoms/collapse";
+@import "atoms/table";
 @import "atoms/tooltip";
 
 @import "atoms/form/input";
