fix(.label): change color text when input is disabled

--- a/src/css/molecules/field.css
+++ b/src/css/molecules/field.css
@@ -42,6 +42,11 @@
     &:hover + .label {
       color: $color-primary;
     }
+
+    &[disabled] + .label,
+    .disabled + .label {
+      color: $color-default;
+    }
   }
 
   .label {
