feat(table): add bordered table

--- a/src/css/atoms/table.css
+++ b/src/css/atoms/table.css
@@ -1,5 +1,6 @@
 .table {
-  border-collapse: collapse;
+  border-collapse: separate;
+  border-spacing: 0;
   font-size: .8rem;
   width: 100%;
 
@@ -9,8 +10,22 @@
   }
 }
 
-.table-zebra {
-  tbody tr:nth-child(odd) {
-    background-color: $color-default-lighter;
+.table-zebra tbody tr:nth-child(odd) {
+  background-color: $color-default-lighter;
+}
+
+.table-bordered {
+  border: .0625rem solid $color-default-light;
+  border-radius: .18rem;
+
+  th, td {
+    border-bottom: .0625rem solid $color-default-light;
+  }
+
+  tbody tr:last-child {
+
+    th, td {
+      border: 0;
+    }
   }
 }
