--- a/src/css/garden.css
+++ b/src/css/garden.css
@@ -11,6 +11,7 @@
 @import "utils/mixins/column-base";
 @import "utils/mixins/push-pull-grid";
 @import "utils/mixins/disable-shadow";
+@import "utils/mixins/button";
 
 @import "atoms/box-sizing";
 @import "atoms/typography";
