feat(modal): add class to prevent scroll

--- a/src/css/garden.css
+++ b/src/css/garden.css
@@ -29,6 +29,7 @@
 @import "atoms/collapse";
 @import "atoms/table";
 @import "atoms/tooltip";
+@import "atoms/scroll";
 
 @import "atoms/form/input";
 @import "atoms/form/label";
