feat(color): add color-black

--- a/docs/styles/molecules/palette.css
+++ b/docs/styles/molecules/palette.css
@@ -112,6 +112,15 @@
     }
   }
 
+  .color-black {
+    background-color: $color-black;
+    color: $color-neutral;
+
+    &::after {
+      content: "color-black: $(color-black)";
+    }
+  }
+
   .color-text {
     background-color: $color-text;
     color: $color-neutral;
