feat(select): Open select option on label click

--- a/src/css/atoms/form/select.css
+++ b/src/css/atoms/form/select.css
@@ -1,6 +1,6 @@
 .select {
   @mixin form-component default, primary-dark {
-    background-color: $color-neutral;
+    background-color: transparent;
     font-size: 1.1rem;
     height: 2.5rem;
   }
