feat(select): Open select option on label click

--- a/src/css/molecules/field.css
+++ b/src/css/molecules/field.css
@@ -23,6 +23,10 @@
     }
   }
 
+  .select + .label {
+    pointer-events: none;
+  }
+
   input[type="checkbox"],
   input[type="radio"] {
     margin-right: .31rem;
