--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -54,10 +54,23 @@ html(lang="pt-BR")
       });
 
       $('.docs').form();
-
-      var modal = $('[data-modal]').modal({
+      
+      var smallModal = $('[data-modal-small]').modal({
         triggerClose: '[data-trigger="close"]',
-        triggerOpen: '[data-trigger="open"]'
+        triggerOpen: '[data-trigger-small="open"]',
+        size: 'small'
+      });
+      
+      var mediumModal = $('[data-modal-medium]').modal({
+        triggerClose: '[data-trigger="close"]',
+        triggerOpen: '[data-trigger-medium="open"]',
+        size: 'medium'
+      });
+      
+      var largeModal = $('[data-modal-large]').modal({
+        triggerClose: '[data-trigger="close"]',
+        triggerOpen: '[data-trigger-large="open"]',
+        size: 'large'
       });
 
       $('[data-notification-dynamic]').notification({
