--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -82,8 +82,7 @@ html(lang="pt-BR")
       }).data('modal');
 
       function closeModalStatic() {
-        console.log('you did it! :)')
-        return modalStatic.hide()
+        return modalStatic.hide();
       }
 
       let modalTrigger = $('[data-modal-trigger]').modal().data('modal')
