fix(pagination): changed pagination-item to inline-block instead float-left

--- a/src/css/atoms/pagination/item.css
+++ b/src/css/atoms/pagination/item.css
@@ -2,7 +2,7 @@
   background-color: transparent;
   border-radius: .1875rem;
   color: $color-primary;
-  float: left;
+  display: inline-block;
   font-size: 1rem;
   margin-left: .5rem;
   padding-bottom: .25rem;
