fix(pagination): improved pagination-arrow class

--- a/src/css/garden.css
+++ b/src/css/garden.css
@@ -46,7 +46,7 @@
 @import "atoms/notification/close";
 
 @import "atoms/pagination/item";
-@import "atoms/pagination/arrows";
+@import "atoms/pagination/arrow";
 
 @import "molecules/field";
 @import "molecules/addon";
