fix(pagination): removed text-decoration on hover

--- a/src/css/atoms/pagination/item.css
+++ b/src/css/atoms/pagination/item.css
@@ -16,6 +16,7 @@
   &.active {
     background-color: $color-primary-dark;
     color: $color-neutral;
+    text-decoration: none;
   }
 
   &:first-child {
