docs(github): Add github corner to docs pages
This will provie an easier way for people to find our repo on GitHub.

--- a/docs/layout/index.jade
+++ b/docs/layout/index.jade
@@ -15,6 +15,7 @@ html(lang="pt-BR")
     link(rel="stylesheet", href="assets/style.css")
 
   body
+    include _partials/github-corner.jade
     include _partials/header.jade
 
     main.banner
