--- a/docs/layout/_partials/header.jade
+++ b/docs/layout/_partials/header.jade
@@ -6,4 +6,4 @@ header.header
       a.link(href="/about.html", class=path == 'about' ? "link-active" : undefined) About
       a.link(href="/getting-started.html", class=path == 'getting-started' ? "link-active" : undefined) Getting Started
       a.link(href="/css/scaffolding.html", class=collection == 'css' ? "link-active" : undefined) CSS
-      a.link(href="/js/form.html", class=collection == 'js' ? "link-active" : undefined) JS
+      a.link(href="/js/modal.html", class=collection == 'js' ? "link-active" : undefined) JS
