fix(select): added appearence none in .select

--- a/src/css/atoms/form/select.css
+++ b/src/css/atoms/form/select.css
@@ -1,5 +1,6 @@
 .select {
   @mixin form-component default, primary-dark {
+    appearance: none;
     background-color: $color-neutral;
     font-size: 1.1rem;
     height: 2.5rem;
