--- a/docs/layout/_partials/header.jade
+++ b/docs/layout/_partials/header.jade
@@ -5,5 +5,4 @@ header.header
     nav.nav
       a.link(href="/about.html", class=path == 'about' ? "link-active" : undefined) About
       a.link(href="/getting-started.html", class=path == 'getting-started' ? "link-active" : undefined) Getting Started
-      a.link(href="/css/scaffolding.html", class=collection == 'css' ? "link-active" : undefined) CSS
-      a.link(href="/js/modal.html", class=collection == 'js' ? "link-active" : undefined) JS
+      a.link(href="/components/scaffolding.html", class=collection == 'docs' ? "link-active" : undefined) Docs
