--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -22,8 +22,19 @@ html(lang="pt-BR")
       .container
         if sidebar
           .col-xs-12.col-sm-4.col-md-3
+            - const css = collections[collection].filter((page) => page.section === 'css')
+            - const js = collections[collection].filter((page) => page.section === 'js')
+            
+            h4.heading-4 CSS
+                        
             nav.sidebar
-              each page in collections[collection]
+              each page in css
+                a.link(href="#{page.path}.html", class=title === page.title ? "link-active" : undefined) #{page.title}
+            
+            h4.heading-4 JS
+            
+            nav.sidebar
+              each page in js
                 a.link(href="#{page.path}.html", class=title === page.title ? "link-active" : undefined) #{page.title}
         if sidebar
           .col-xs-12.col-sm-8.col-md-9.content!= contents
