docs(grid): add interactivity to container section

--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -142,3 +142,11 @@ html(lang="pt-BR")
       $('.toggle').collapse();
 
       $('[data-tooltip]').tooltip();
+
+      $('[data-toggle-container]').on('click', () => {
+        const container = $('[data-container]')
+        const containerText = container.find('[data-container-text]')
+
+        container.toggleClass('example-container example-container--fluid')
+        containerText.text(container.hasClass('example-container') ? '.container' : '.container-fluid')
+      })
