--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -171,7 +171,10 @@ html(lang="pt-BR")
 
       $('.toggle').collapse();
 
-      $('[data-tooltip]').tooltip();
+      $('[data-tooltip="#top"]').tooltip();
+      $('[data-tooltip="#bottom"]').tooltip({ placement: 'bottom' });
+      $('[data-tooltip="#left"]').tooltip({ placement: 'left' });
+      $('[data-tooltip="#right"]').tooltip({ placement: 'right' });
 
       $('[data-toggle-container]').on('click', () => {
         const container = $('[data-container]')
