--- a/src/css/molecules/thumbnail.css
+++ b/src/css/molecules/thumbnail.css
@@ -23,7 +23,7 @@
       top: 0;
       transition: opacity .3s ease-in-out;
       width: 100%;
-      z-index: -1;
+      z-index: $index-rear;
     }
 
     &:hover::after,
