feat(steps): rename molecule to steps

--- a/src/css/garden.css
+++ b/src/css/garden.css
@@ -61,6 +61,6 @@
 @import "molecules/feedback";
 @import "molecules/collapse";
 @import "molecules/tooltip";
-@import "molecules/steps-stage";
+@import "molecules/steps";
 
 @import "molecules/panel";
