feat(steps): create warning modifier in steps-stage

--- a/src/css/molecules/steps.css
+++ b/src/css/molecules/steps.css
@@ -28,4 +28,12 @@
       color: $color-black;
     }
   }
+
+  &.warning {
+
+    .steps-bullet {
+      border-color: $color-danger;
+      color: $color-danger;
+    }
+  }
 }
