--- a/src/css/molecules/field.css
+++ b/src/css/molecules/field.css
@@ -17,6 +17,7 @@
       border-top: .35rem solid $color-black;
       content: "";
       height: 0;
+      pointer-events: none;
       position: absolute;
       right: .6rem;
       top: 1.6rem;
