fix(addon): remove pointer-events from addon

--- a/src/css/atoms/form/addon.css
+++ b/src/css/atoms/form/addon.css
@@ -1,6 +1,7 @@
 .addon {
   color: $color-text;
   padding-top: .7rem;
+  pointer-events: none;
   position: absolute;
   text-align: center;
   width: 2rem;
