docs(modal): add example for history modal in docs

--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -88,6 +88,12 @@ html(lang="pt-BR")
         triggerOpen: '[data-trigger-large="open"]',
         size: 'large'
       });
+      
+      $('[data-modal-history]').modal({
+        triggerOpen: '[data-trigger-history="open"]',
+        size: 'small',
+        history: true
+      });
 
       let modalStatic = $('[data-modal-static]').modal({
         triggerOpen: '[data-trigger-static="open"]',
