--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -193,3 +193,31 @@ html(lang="pt-BR")
       $('[data-scroll]').on('click', () => {
         $('.footer').scroll();
       })
+
+      $('[data-scroll-usage]').on('click', () => {
+        $('#usage').scroll();
+      })
+
+      $('[data-scroll-options]').on('click', () => {
+        $('#options').scroll();
+      })
+
+      $('[data-scroll-methods]').on('click', () => {
+        $('#methods').scroll();
+      })
+
+      $('[data-scroll-opening]').on('click', () => {
+        $('#opening-a-modal').scroll();
+      })
+
+      $('[data-scroll-size]').on('click', () => {
+        $('#modal-size').scroll();
+      })
+
+      $('[data-scroll-static]').on('click', () => {
+        $('#static-modal').scroll();
+      })
+
+      $('[data-scroll-history]').on('click', () => {
+        $('#history-option').scroll();
+      })
