--- a/src/css/atoms/grid.css
+++ b/src/css/atoms/grid.css
@@ -10,8 +10,8 @@
 .row {
   @mixin clearfix;
   box-sizing: border-box;
-  margin-left: -calc($gutter-width / 2);
-  margin-right: -calc($gutter-width / 2);
+  margin-left: calc(-1 * $gutter-width / 2);
+  margin-right: calc(-1 * $gutter-width / 2);
 }
 
 @each $breakpoint, $custom-media, $screen-size in (xs, sm, md, lg, xl), (--extra-small, --small, --medium, --large, --extra-large), (100%, 100%, calc($breakpoint-sm + 1px), calc($breakpoint-md + 1px), calc($breakpoint-lg + 1px)) {
